pi-cluster/deployments/boot/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: boot
  namespace: boot
  labels:
    app: boot
spec:
  type: ClusterIP
  selector:
    app: boot
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http1
