pi-cluster/deployments/boot/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: boot
  namespace: boot
  labels:
    app: boot
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://auth.charlieegan3.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.charlieegan3.com/oauth2/start?rd=https://boot.charlieegan3.com"
spec:
  tls:
  - hosts:
    - boot.charlieegan3.com
    secretName: boot-tls
  rules:
  - host: boot.charlieegan3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: boot
          servicePort: 80
